--- a/Ecommerce_Application/Views/Order/_ViewOrdersSec.cshtml
+++ b/Ecommerce_Application/Views/Order/_ViewOrdersSec.cshtml
@@ -22,6 +22,11 @@
                             <h6>₹ @orders.Price</h6>
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <span>Address: @orders.Address</span>
+                        </td>
+                    </tr>
                 </table>
                 <div class="d-flex justify-content-center flex-column align-items-center ms-auto">
 
